# spegel

./: .gitignore  LICENSE  README.md  env_example.txt  example_config.toml  install_bedrock.py  noxfile.py  pyproject.toml
.github/workflows/: publish.yml  test-publish.yml  tests.yml
src/spegel/: __init__.py  __main__.py  config.py  llm.py  main.py  views.py  web.py
src/spegel/_internal/: cli.py  debug.py
src/spegel/llm/: __init__.py  base.py  claude.py  gemini.py  openai.py
tests/: test_config.py  test_content_processing.py  test_llm.py  test_llm_claude.py  test_llm_factory.py  test_llm_gemini.py  test_llm_openai.py  test_main.py  test_models.py  test_navigation.py  test_performance.py  test_scroll_management.py  test_ui_integration.py  test_views.py  test_web.py
