[project]
name = "spegel"
version = "0.1.1"
description = "Spegel - Reflect the web through AI. A terminal browser with multiple AI-powered views."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Simon Edwardsson", email = "simon.edwardsson@gmail.com"},
]
keywords = ["terminal", "browser", "ai", "llm", "web", "tui", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Markup :: HTML",
]

dependencies = [
    "beautifulsoup4>=4.13.4",
    "google>=3.0.0",
    "google-genai>=1.20.0",
    "html2text>=2025.4.15",
    "lxml>=5.4.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "textual>=3.3.0",
    "pydantic>=2.7.1",
]

[project.urls]
"Homepage" = "https://github.com/simedw/spegel"
"Repository" = "https://github.com/simedw/spegel"
"Bug Tracker" = "https://github.com/simedw/spegel/issues"
"Documentation" = "https://github.com/simedw/spegel#readme"

[project.scripts]
spegel = "spegel.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
# Basic config for Ruff, feel free to adjust as needed
line-length = 88
select = [
    "E",  # pycodestyle errors (PEP 8 violations)
    "F",  # Pyflakes (unused imports, undefined names, etc.)
    "N",  # pep8-naming (naming convention violations)
]
ignore = [
    "E501",  # Line too long
    "F403",  # 'from module import *' used; unable to detect undefined names
    "F405",  # Name may be undefined, or defined from star imports: module
]

[tool.coverage.run]
branch = true
parallel = true
source = [
    "src/"
]

[tool.coverage.paths]
equivalent = [
    "src/",
    ".venv/lib/*/site-packages/",
    ".venvs/*/lib/*/site-packages/",
]

[tool.coverage.report]
precision = 2
omit = [
    "src/*/__init__.py",
    "src/*/__main__.py",
    "tests/__init__.py",
]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
]

[tool.coverage.json]
output = "htmlcov/coverage.json"

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "pytest-cov>=6.2.1",
]
